<resources>
    <string name="title_activity_skill_panel">SkillPanel</string>

    <string name="app_name">Skills of the Day</string>
    <string name="menu_sortByRating">Sort by Rating</string>
    <string name="menu_sortByDifficulty">Sort by Difficulty</string>
    <string name="menu_sortByName">Sort by Name</string>
    <string name="title_activity_navbar">navbar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_skillliste">Explore</string>
    <string name="nav_merkliste">Merkliste</string>
    <string name="nav_SkillVorschlag">Skill Vorschlagen</string>
    <string name="nav_settings">Einstellungen</string>

    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Skillsliste</item>
        <item>Merkliste</item>
        <item>Einstellungen</item>
    </string-array>

    <string name="privacy_policy">Private Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
